Fixed white space in Blog page

--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ h1 {
 
 .title .background {
     position: relative;
-    width: 100%
+    width: 100%;
 }
 
 .column {
